<resources>
    <string name="app_name">Сколько с меня?</string>
    <string name="btn_enterlist">Ввести покупки вручную</string>
    <string name="btn_login">Login</string>
    <string name="btn_qr">Сканировать чек</string>
    <string name="next">Продолжить</string>
    <string name="count">0 шт</string>
    <string name="price">0.00 р</string>
    <string name="product_list">Список покупок</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="string_internet_connection_not_available">Can not connect to the Internet</string>
    <string name="find_table">Найти стол</string>
    <string name="create_table">Создать стол</string>
    <string name="toMain">На главную</string>
    <string name="history">История</string>
    <string name="logout">Выход</string>
    <string name="delete">Удалить</string>
    <string name="create_table_message">Сообщи этот код \nдрузьям, \nчтобы они смогли \nприсоединиться</string>
    <string name="connect_table_message">Введи код стола,\nчтобы присоединиться</string>

</resources>
