<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <EditText
                android:id="@+id/addProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.32"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/addCount"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0.12"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/count"
                android:inputType="number"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.35"
                android:text="x"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/priceView"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <EditText
                android:id="@+id/addPrice"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0.32"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/incButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:onClick="add"
                android:text="+" >
                <requestFocus />
            </Button>

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/productList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>